--- a/package.json
+++ b/package.json
@@ -16,18 +16,21 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@eslint/js": "^9.14.0",
+        "@types/eslint__js": "^8.42.3",
         "@types/express": "^4.17.21",
         "@types/http-errors": "^2.0.4",
         "@types/node": "^20.12.7",
         "@typescript-eslint/eslint-plugin": "^7.7.1",
         "@typescript-eslint/parser": "^7.7.1",
-        "eslint": "^8.57.0",
+        "eslint": "^8.57.1",
         "eslint-config-prettier": "^9.1.0",
         "husky": "^9.0.11",
         "lint-staged": "^15.2.2",
         "prettier": "3.2.5",
         "ts-node": "^10.9.2",
-        "typescript": "^5.4.5"
+        "typescript": "^5.6.3",
+        "typescript-eslint": "^8.14.0"
     },
     "dependencies": {
         "dotenv": "^16.4.5",
