--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "server": "nodemon src/server.ts",
+        "server": "nodemon",
         "format:check": "prettier . --check",
         "format:fix": "prettier . --write",
         "lint:check": "eslint .",
         "lint:fix": "eslint . --fix",
-        "prepare": "husky"
+        "db:generate":"drizzle-kit generate",
+        "db:migrate":"drizzle-kit migrate"
     },
     "keywords": [],
     "author": "",
@@ -23,6 +24,7 @@
         "@types/node": "^20.12.7",
         "@typescript-eslint/eslint-plugin": "^7.7.1",
         "@typescript-eslint/parser": "^7.7.1",
+        "drizzle-kit": "^0.28.0",
         "eslint": "^8.57.1",
         "eslint-config-prettier": "^9.1.0",
         "husky": "^9.0.11",
@@ -34,8 +36,10 @@
     },
     "dependencies": {
         "dotenv": "^16.4.5",
+        "drizzle-orm": "^0.36.1",
         "express": "^4.19.2",
         "http-errors": "^2.0.0",
+        "postgres": "^3.4.5",
         "winston": "^3.13.0"
     },
     "lint-staged": {
