--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
         "format:fix": "prettier . --write",
         "lint:check": "eslint .",
         "lint:fix": "eslint . --fix",
-        "db:generate":"drizzle-kit generate",
-        "db:migrate":"drizzle-kit migrate"
+        "db:generate": "drizzle-kit generate",
+        "db:migrate": "drizzle-kit migrate"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "@eslint/js": "^9.14.0",
+        "@types/bcrypt": "^5.0.2",
         "@types/eslint__js": "^8.42.3",
         "@types/express": "^4.17.21",
         "@types/http-errors": "^2.0.4",
+        "@types/jsonwebtoken": "^9.0.7",
         "@types/node": "^20.12.7",
         "@typescript-eslint/eslint-plugin": "^7.7.1",
         "@typescript-eslint/parser": "^7.7.1",
@@ -35,10 +37,12 @@
         "typescript-eslint": "^8.14.0"
     },
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "dotenv": "^16.4.5",
         "drizzle-orm": "^0.36.1",
         "express": "^4.19.2",
         "http-errors": "^2.0.0",
+        "jsonwebtoken": "^9.0.2",
         "postgres": "^3.4.5",
         "winston": "^3.13.0"
     },
