--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "server": "nodemon",
+        "dev": "nodemon",
         "format:check": "prettier . --check",
         "format:fix": "prettier . --write",
         "lint:check": "eslint .",
@@ -19,10 +20,13 @@
     "devDependencies": {
         "@eslint/js": "^9.14.0",
         "@types/bcrypt": "^5.0.2",
+        "@types/cookie-parser": "^1.4.7",
+        "@types/cors": "^2.8.17",
         "@types/eslint__js": "^8.42.3",
         "@types/express": "^4.17.21",
         "@types/http-errors": "^2.0.4",
         "@types/jsonwebtoken": "^9.0.7",
+        "@types/multer": "^1.4.12",
         "@types/node": "^20.12.7",
         "@typescript-eslint/eslint-plugin": "^7.7.1",
         "@typescript-eslint/parser": "^7.7.1",
@@ -38,13 +42,18 @@
     },
     "dependencies": {
         "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "drizzle-orm": "^0.36.1",
         "express": "^4.19.2",
+        "helmet": "^8.0.0",
         "http-errors": "^2.0.0",
         "jsonwebtoken": "^9.0.2",
+        "multer": "^1.4.5-lts.1",
         "postgres": "^3.4.5",
-        "winston": "^3.13.0"
+        "winston": "^3.13.0",
+        "zod": "^3.23.8"
     },
     "lint-staged": {
         "*.ts": [
